exprimental with Details trying to fix overflow to the right will come back to it later

--- a/src/pages/Detail.scss
+++ b/src/pages/Detail.scss
@@ -1,10 +1,10 @@
 .sliderimg{
-    width: 100%;
+
     height: 250px;
     object-fit: cover
   };
 .carousel{
-    width: 100%;
+  position: relative;
 };
 .head{
     display: flex;
@@ -16,6 +16,7 @@
 .button{
     display: flex;
     flex-direction: row-reverse;
+    flex-wrap: wrap;
 }
 .title{
     font: bold 25px
